# NEA-StealthGame

./: CMakeLists.txt  CMakePresets.json  NEA Stealth Game.cpp  NEA Stealth Game.h  README.md  vc140.idb
Application/: Application.cpp  Application.h
Source/: NEA Stealth Game.cpp  NEA Stealth Game.h
Source/Application/: Application.cpp  Application.h  Color.h  Signal.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Vector2D.h
Source/Application/Data Structures/: List.h
Source/Collision/: Collision.h  CollisionBody.cpp  CollisionBody.h  CollisionData.h
Source/Collision/CollisionShapes/: CollisionRect.cpp  CollisionRect.h  CollisionShape.cpp  CollisionShape.h
Source/Collision/Raycast/: Raycast.cpp  Raycast.h
Source/Components/Health/: HealthComponent.cpp  HealthComponent.h
Source/Components/Items/: ItemsComponent.cpp  ItemsComponent.h
Source/Components/Movement/: MovementComponent.cpp  MovementComponent.h
Source/Entities/: Entity.cpp  Entity.h
Source/Entities/Enemy/: Enemy.cpp  Enemy.h
Source/Entities/Player/: Player.cpp  Player.h
Source/HUD/: ItemsHUD.cpp  ItemsHUD.h
Source/Items/: Item.cpp  Item.h
Source/Items/Ration/: Ration.cpp  Ration.h
Source/Nodes/: Node.cpp  Node.h
Source/Nodes/AnimatedSprite/: AnimatedSprite.cpp  AnimatedSprite.h
Source/Nodes/AnimationPlayer/: Animation.h  AnimationPlayer.cpp  AnimationPlayer.h
Source/Nodes/Camera/: Camera.cpp  Camera.h
Source/Nodes/Node2D/: Node2D.cpp  Node2D.h
Source/Nodes/Rectangle/: Rectangle.cpp  Rectangle.h
Source/Nodes/Sprite/: Sprite.cpp  Sprite.h
Source/Nodes/TimerNode/: TimerNode.cpp  TimerNode.h
Source/Pathfinding/: NavigationMesh.cpp  NavigationMesh.h  Pathfinding.cpp  Pathfinding.h
Source/Projectiles/: Projectile.cpp  Projectile.h
Source/Projectiles/PistolShot/: PistolShot.cpp  PistolShot.h
Source/SceneTree/: SceneTree.cpp  SceneTree.h
Source/Scenes/: GameOverScreen.cpp  GameOverScreen.h  MainMenu.cpp  MainMenu.h  TestScene.cpp  TestScene.h
Source/Scenes/Levels/: Level.cpp  Level.h
Source/Scenes/Menus/AboutMenu/: AboutMenu.cpp  AboutMenu.h
Source/Scenes/Menus/MainMenu/: MainMenu.cpp  MainMenu.h
Source/Scenes/Menus/SettingsMenu/: SettingsMenu.cpp  SettingsMenu.h
Source/UI/Button/: Button.cpp  Button.h
Source/UI/Label/: Label.cpp  Label.h
Source/UI/ProgressBar/: ProgressBar.cpp  ProgressBar.h
Source/UI/Slider/: Slider.cpp  Slider.h
Source/Weapons/Pistol/: Pistol.cpp  Pistol.h
